Alteração de logout

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="shortcut icon" href="./src/assets/favicon.ico" />
+    <link rel="icon" href="./src/assets/favicon.ico" type="image/x-icon" />
     <meta charset="utf-8">
-    <title>banco_de_questoes</title>
+    <title>Banco de Questoes - SEMEC</title>
   </head>
   <body>
     <div id="app"></div>
