--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="shortcut icon" href="./src/assets/favicon.ico" />
-    <link rel="icon" href="./src/assets/favicon.ico" type="image/x-icon" />
     <meta charset="utf-8">
     <title>Banco de Questoes - SEMEC</title>
+    <link rel="shortcut icon" href="https://lh5.googleusercontent.com/-xJk2X8MKz2t-wPl3mCq9xtQeFggnt-VfF1QqaSFU_Jbw9OMKBEbx9XVV4nF4wMXrbZGHNcFMtsI8sM=w1366-h599" />
+    <link rel="icon" href="https://lh5.googleusercontent.com/-xJk2X8MKz2t-wPl3mCq9xtQeFggnt-VfF1QqaSFU_Jbw9OMKBEbx9XVV4nF4wMXrbZGHNcFMtsI8sM=w1366-h599" type="image/x-icon" />
   </head>
   <body>
     <div id="app"></div>
