--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script type="text/javascript" src="node_modules/materialize-css/dist/js/materialize.js"></script>
   </body>
 </html>
